<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/transaction_card_view"
    android:layout_margin="10dp"
    android:fadingEdge="horizontal"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/t_from"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textColor="#e31429"
                android:fontFamily="@font/armata"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/t_from_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/armata"
                android:paddingEnd="3dp"
                android:textSize="18sp"
                android:hint="@string/not_selected"
                android:paddingLeft="10dp"
                android:paddingRight="3dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="18sp"
                android:fontFamily="@font/armata"
                android:textStyle="bold"
                android:textColor="#e31429"
                android:text="@string/amount" />
        </LinearLayout>

        <LinearLayout
            android:padding="6dp"
            android:id="@+id/to_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/t_to"
                android:fontFamily="@font/armata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textColor="#e31429"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/t_to_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:paddingStart="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/armata"
                android:paddingEnd="3dp"
                android:hint="@string/transaction_cancelled"
                android:paddingLeft="10dp"
                android:paddingRight="3dp" />

            <TextView
                android:id="@+id/t_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:fontFamily="@font/armata"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:hint="@string/not_set" />
        </LinearLayout>

        <LinearLayout
            android:padding="6dp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="1"
                android:id="@+id/t_date"
                android:fontFamily="@font/armata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="#0099ff"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_weight="1"
                android:id="@+id/t_time"
                android:textAlignment="textEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:fontFamily="@font/armata"
                android:textColor="#0099ff"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                android:textSize="18sp"
                android:gravity="end"
                android:layout_marginLeft="15dp" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>